--- a/debian/control
+++ b/debian/control
@@ -2,21 +2,25 @@ Source: luajit
 Section: interpreters
 Priority: optional
 Maintainer: Enrico Tassi <gareuselesinge@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), quilt (>= 0.46-7~)
+Build-Depends: debhelper (>= 7.0.50~),
+               quilt (>= 0.46-7~)
 Standards-Version: 3.9.4
 Vcs-Git: git://git.debian.org/git/pkg-lua/luajit.git
 Vcs-Browser: http://git.debian.org/?p=pkg-lua/luajit.git
 Homepage: http://luajit.org
 
 Package: luajit
-Architecture: i386 amd64 kfreebsd-i386 armel armhf powerpc powerpcspe mips mipsel hurd-i386
+Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
 Multi-Arch: foreign
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, libluajit-5.1-common (= ${source:Version}), libluajit-5.1-2 (= ${binary:Version})
+Depends: libluajit-5.1-2 (= ${binary:Version}),
+         libluajit-5.1-common (= ${source:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Just in time compiler for Lua programming language version 5.1
  LuaJIT implements the full set of language features defined by Lua 5.1. The
  virtual machine (VM) is API- and ABI-compatible to the standard Lua interpreter
- and can be deployed as a drop-in replacement.  
+ and can be deployed as a drop-in replacement.
  .
  This package contains the standalone interpreter/jitter that can be used
  as a replacement for the standard lua5.1 interpreter.
@@ -24,20 +28,23 @@ Description: Just in time compiler for Lua programming language version 5.1
 Package: libluajit-5.1-common
 Architecture: all
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Description: Just in time compiler for Lua - common files
  This package contains files needed by the LuaJIT interpreter/jitter as well
  by its embeddable (i.e. library) version.
 
 Package: libluajit-5.1-2
-Architecture: i386 amd64 kfreebsd-i386 armel armhf powerpc powerpcspe mips mipsel hurd-i386
+Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, libluajit-5.1-common (= ${source:Version})
+Depends: libluajit-5.1-common (= ${source:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Just in time compiler for Lua - library version
  LuaJIT implements the full set of language features defined by Lua 5.1. The
  virtual machine (VM) is API- and ABI-compatible to the standard Lua interpreter
- and can be deployed as a drop-in replacement.  
+ and can be deployed as a drop-in replacement.
  .
  This package contains an embeddable version of LuaJIT that can be used as a
  replacement of the standard liblua-5.1 shared library.
@@ -46,8 +53,10 @@ Package: libluajit-5.1-dev
 Section: libdevel
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Architecture: i386 amd64 kfreebsd-i386 armel armhf powerpc powerpcspe mips mipsel hurd-i386
-Depends: ${shlibs:Depends}, ${misc:Depends}, libluajit-5.1-2 (= ${binary:Version})
+Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
+Depends: libluajit-5.1-2 (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Just in time compiler for Lua - development files
  This package contains header files and a statically linkable library for
  LuaJIT.
