--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: luajit
 Section: interpreters
 Priority: optional
 Maintainer: Enrico Tassi <gareuselesinge@debian.org>
-Build-Depends: debhelper (>= 7.0.50~),
-               quilt (>= 0.46-7~)
+Build-Depends: debhelper (>= 9~)
 Standards-Version: 3.9.4
 Vcs-Git: git://git.debian.org/git/pkg-lua/luajit.git
 Vcs-Browser: http://git.debian.org/?p=pkg-lua/luajit.git
