--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,8 @@ Priority: optional
 Maintainer: Enrico Tassi <gareuselesinge@debian.org>
 Build-Depends: debhelper (>= 9~)
 Standards-Version: 3.9.4
-Vcs-Git: git://git.debian.org/git/pkg-lua/luajit.git
-Vcs-Browser: http://git.debian.org/?p=pkg-lua/luajit.git
+Vcs-Git: git://anonscm.debian.org/pkg-lua/luajit.git
+Vcs-Browser: https://anonscm.debian.org/gitweb/?p=pkg-lua/luajit.git
 Homepage: http://luajit.org
 
 Package: luajit
