--- a/debian/rules
+++ b/debian/rules
@@ -16,3 +16,6 @@ override_dh_auto_install:
 	make install PREFIX=/usr DESTDIR=$$PWD/debian/tmp/ MULTILIB=lib/$(DEB_HOST_MULTIARCH) LDCONFIG="/sbin/ldconfig -n"
 	sed -i 's?^multilib=.*?multilib=lib/$(DEB_HOST_MULTIARCH)?' \
 		debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig/*.pc
+
+override_dh_strip:
+	dh_strip --dbg-package=luajit-dbg
