--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Vcs-Browser: https://anonscm.debian.org/gitweb/?p=pkg-lua/luajit.git
 Homepage: http://luajit.org
 
 Package: luajit
-Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
+Architecture: any
 Multi-Arch: foreign
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libluajit-5.1-2 (= ${binary:Version}),
@@ -33,7 +33,7 @@ Description: Just in time compiler for Lua - common files
  by its embeddable (i.e. library) version.
 
 Package: libluajit-5.1-2
-Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
+Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libluajit-5.1-common (= ${source:Version}),
@@ -51,7 +51,7 @@ Package: libluajit-5.1-dev
 Section: libdevel
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
+Architecture: any
 Depends: libluajit-5.1-2 (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
@@ -60,7 +60,7 @@ Description: Just in time compiler for Lua - development files
  LuaJIT.
 
 Package: luajit-dbg
-Architecture: amd64 armel armhf hurd-i386 i386 kfreebsd-i386 mips mipsel powerpc powerpcspe
+Architecture: any
 Multi-Arch: same
 Priority: extra
 Section: debug
